@@ -1,6 +1,12 @@
 FlightPath 5.x Changelog
 ========================
 
+2017-11-30
+  Fixed bug where courses with inf. repeats were not respecting minimum grades.
+  
+  Fixed another bug with inf. repeats, where substitutions were interfering with inf. course logic.
+  
+
 2017-11-26
   Fixed missing child group issue, caused by previous work (special thanks to Logan Bluth)
   
